4024 uninitialized and unused variables in cmd/fs.d/nfs Reviewed by: Dan McDonald <danmcd@nexenta.com> Approved by: Robert Mustacchi <rm@joyent.com>